...

    func makeUIView(context: Context) -> ASAuthorizationAppleIDButton {
        let button = ASAuthorizationAppleIDButton(
            authorizationButtonType: .signIn,
            authorizationButtonStyle: Self.style(for: colorScheme))
        button.cornerRadius = Self.cornerRadius
        button.accessibilityIdentifier = "signInAppleButton"
        button.addTarget(context.coordinator, action: #selector(Coordinator.tapped), for: .touchUpInside)
        button.setContentHuggingPriority(.defaultLow, for: .horizontal)
        return button
    }

    func updateUIView(_ button: ASAuthorizationAppleIDButton, context: Context) {
...
